fix(daemon): close leaked ashmem/fds, harden the dex2oat wrapper, defuse lazy-init races
Engineering review sweep over the daemon service layer:

- Dex2OatService: a client that reset its connection (IOException) retired the
  wrapper for good, and one that disconnected before writing anything made
  read() return -1, so fdArray[-1] threw, escaped into the default uncaught
  handler and System.exit()ed the whole daemon. Handle each connection on its
  own, bounds-check the id, and keep the accept loop alive.
- obfuscation.cpp: the dup'd input ashmem fd and its full-dex-sized mapping
  were never released on every module load; close the fd after mmap and
  munmap after the rewrite, and bail cleanly when dup/mmap fails.
- ConfigManager: close the replaced generation's preloaded dexes on module
  update and everything still cached when pm dies (clearCache) - dropping
  them without close leaked an fd and a dex-sized mapping each time.
- ConfigManager: getPreloadDex no longer synchronizes on the instance
  monitor, so per-app-process DEX fetches cannot serialize behind a long
  cacheModules(); ConfigFileManager.getPreloadDex already guards the load.
- ConfigManager: isUidHooked short-circuits with anyMatch instead of a
  full-scan reduce; getInstance is synchronized so two threads cannot
  construct two instances (double db, duplicate cache thread).
- ConfigFileManager: readDex closes the ashmem and unmaps on failure paths;
  module inspection is a single-pass readModuleFlavor (module.prop was
  parsed twice per apk on every package scan).
- LSPManagerService: broadcastIntent sent the same broadcast twice; guard is
  volatile, postStartManager synchronized, listFiles() null guarded.
- LSPNotificationManager: getNotificationManager no longer NPEs on a missing
  service nor double-links the death recipient; notification ids atomic.
- PackageService/ActivityManagerService/UserService/PowerService/
  DeviceIdleService: synchronized lazy getters (no double linkToDeath);
  un